components/operators/keycloak/operator/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    description: Route for keycloak's service.
  labels:
    application: keycloak
  name: keycloak
spec:
  host: ""
  tls:
    termination: edge
  to:
    name: keycloak-service
